--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -24,6 +26,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react-contextmenu": "^2.11.0",
     "react-player": "^1.11.0",
+    "react-router-dom": "^5.0.0",
     "style-loader": "^0.23.1",
     "video-react": "^0.13.6",
     "webpack": "^4.29.6",
@@ -38,7 +41,6 @@
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-router": "^3.2.1",
-    "react-router-dom": "^5.0.0"
+    "react-router": "^3.2.1"
   }
 }
