--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.8.6",
+    "local-storage": "^2.0.0",
     "react": "^16.8.4",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.5",
